--- a/.github/workflows/workflowAQUATRIVY.yml
+++ b/.github/workflows/workflowAQUATRIVY.yml
@@ -14,8 +14,8 @@ jobs:
 
     - name: Generate tarball from image
       run: |
-        docker pull nginx
-        docker save -o vuln-image.tar nginx
+        docker pull nginx:latest
+        docker save -o vuln-image.tar nginx.lqtest
         
     - name: Run Trivy vulnerability scanner in tarball mode
       uses: aquasecurity/trivy-action@master
