--- a/.github/workflows/workflowAQUATRIVY.yml
+++ b/.github/workflows/workflowAQUATRIVY.yml
@@ -1,24 +1,16 @@
-name: build
+name: tfsec
 on:
   push:
     branches:
-    - master
+      - main
   pull_request:
 jobs:
-  build:
-    name: Build
-    runs-on: ubuntu-20.04
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+  tfsec:
+    name: tfsec
+    runs-on: ubuntu-latest
 
-    - name: Generate tarball from image
-      run: |
-        docker pull nginx:latest
-        docker save -o vuln-image.tar nginx.lqtest
-        
-    - name: Run Trivy vulnerability scanner in tarball mode
-      uses: aquasecurity/trivy-action@master
-      with:
-        input: /github/workspace/vuln-image.tar
-        severity: 'CRITICAL,HIGH'
+    steps:
+      - name: Clone repo
+        uses: tenable/KaiMonkey/actions@master
+      - name: tfsec
+        uses: aquasecurity/tfsec-action@v1.0.0
